[tool.poetry]
name = "halifax transit live metrics"
version = "0.1.0"
description = "This is a Shiny dashboard showcasing insights obtained using GTFS data from Halifax Transit real-time and static scheduling data"
authors = ["carstrb <cstraub@dal.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
shiny = "^1.1.0"
gtfs-realtime-bindings = "^1.0.0"
ipyleaflet = "^0.19.2"
ipywidgets = "^8.1.5"
shinywidgets = "^0.3.3"
pandera = "^0.20.4"
ruff = "^0.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
poethepoet = "^0.31.1"

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format --check ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
